# FolderInspector

./: CMakeLists.txt  FolderInspector.sln  README.md
.github/workflows/: c-cpp-experimental.yml  c-cpp.yml
FolderInspector/: FileInfo.h  FileInfoReader.h  FileInfoWriter.h  FolderInspector.cpp  FolderInspector.h  FolderInspector.vcxproj  FolderInspector.vcxproj.filters  TextFileInfoWriter.cpp  TextFileInfoWriter.h  Utils.cpp  Utils.h  WindowsFileInfoReader.cpp  WindowsFileInfoReader.h  WindowsUtils.h  main.cpp
FolderInspector/Linux/: LinuxFileInfoReader.cpp  LinuxFileInfoReader.h  LinuxUtils.cpp  LinuxUtils.h
FolderInspector/Windows/: WindowsFileInfoReader.cpp  WindowsFileInfoReader.h  WindowsMain.cpp  WindowsUtils.cpp  WindowsUtils.h
Source/: FileInfoReader.h  FolderInspector.h  TextFileInfoWriter.cpp  TextFileInfoWriter.h
Source/Linux/: LinuxFileInfoReader.cpp  LinuxFileInfoReader.h  LinuxMain.cpp  LinuxUtils.cpp  LinuxUtils.h
Source/Windows/: WindowsFileInfoReader.cpp  WindowsFileInfoReader.h  WindowsUtils.cpp  WindowsUtils.h
